fix: removing scrollbar border

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,6 @@ html, body {
 
 ::-webkit-scrollbar-track {
     background: #222222;
-    border-radius: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
